--- a/v2/api/builder/apifield.css
+++ b/v2/api/builder/apifield.css
@@ -1,7 +1,3 @@
-
-#apibuilder input:focus ~ label, #apibuilder input:valid ~ label 		{
-    color:white;
-}
 #apibuilder .bar:before, #apibuilder .bar:after 	{
     background:white; 
 }
